--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/fiber": "^8.17.6",
     "@types/three": "^0.167.2",
     "openai": "^4.67.1",
+    "overlayscrollbars": "^2.10.0",
+    "overlayscrollbars-react": "^0.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.168.0"
